fix: correct pnpm workspace configuration paths
- Update pnpm-workspace.yaml to use correct directory structure
- Update package.json workspaces to match actual project layout
- Services are in services/java, services/nodejs, services/frontend
- Shared modules are in shared/*

This fixes the 'Install dependencies' hanging issue in CI/CD

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "typescript": "^5.2.2"
   },
   "workspaces": [
-    "packages/*"
+    "services/java/*",
+    "services/nodejs/*",
+    "services/frontend",
+    "shared/*"
   ]
 }
