fix: use pnpm -r instead of pnpm run --recursive to prevent infinite loops
The 'pnpm run <script> --recursive' syntax causes infinite loops because:
1. pnpm executes the script in the root package
2. The script calls 'pnpm run <script> --recursive'
3. This triggers the script again in the root package
4. Arguments accumulate, creating an infinite loop

Solution: Use 'pnpm -r run <script>' which is the correct syntax for
running scripts recursively across workspaces without triggering the
root package's script.

This fixes the CI/CD pipeline hanging on 'Run ESLint' and other script steps.

--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "pnpm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "pnpm run dev --recursive",
-    "build": "pnpm run build --recursive",
-    "test": "pnpm run test --recursive",
-    "test:coverage": "pnpm run test:coverage --recursive",
-    "lint": "pnpm run lint --recursive",
-    "lint:fix": "pnpm run lint:fix --recursive",
+    "dev": "pnpm -r run dev",
+    "build": "pnpm -r run build",
+    "test": "pnpm -r run test",
+    "test:coverage": "pnpm -r run test:coverage",
+    "lint": "pnpm -r run lint",
+    "lint:fix": "pnpm -r run lint:fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "clean": "pnpm run clean --recursive && rm -rf node_modules pnpm-lock.yaml",
+    "clean": "pnpm -r run clean && rm -rf node_modules pnpm-lock.yaml",
     "docker:build": "docker-compose -f infrastructure/docker/docker-compose.dev.yml build",
     "docker:up": "docker-compose -f infrastructure/docker/docker-compose.dev.yml up -d",
     "docker:down": "docker-compose -f infrastructure/docker/docker-compose.dev.yml down",
