chore: temporarily disable shared/types-java module for build
The shared/types-java module has compilation errors that need to be fixed.
Disabling it temporarily to allow other services to build and test.
Will be re-enabled after fixing the issues.

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <module>services/java/lis-service</module>
         <module>services/java/ris-service</module>
         <module>services/java/pharmacy-service</module>
-        <module>shared/types-java</module>
+        <!-- <module>shared/types-java</module> TODO: Fix compilation errors -->
     </modules>
 
     <dependencyManagement>
